objects/LocationProgram__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The end of the period that we administer the program for this location.</description>
        <inlineHelpText>The end of the period that we administer the program for this location.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationProgramEID__c</fullName>
        <description>The Enterprise ID for this Location Program record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Location Program record.</inlineHelpText>
        <label>Location Program EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location associated with the program and launch date</description>
        <inlineHelpText>The location associated with the program and launch date</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>LocationProgramLaunches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The program associated with the location and launch date</description>
        <inlineHelpText>The program associated with the location and launch date</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>LocationProgramLaunches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The location program launch date</description>
        <inlineHelpText>The location program launch date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Location Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Program__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>